<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_view_event"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#46BD79"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="comp4350.eventus.ui.ViewServiceActivity">

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back" />

    <ScrollView
        android:id="@+id/detailsScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/titleTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:id="@+id/detailsListLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/priceTag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Price: $"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/dateBookedTag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Date Booked: "
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:scrollHorizontally="true"
        android:maxWidth="150dp"
        android:maxLines="2"
        android:text="TitleHere"
        android:textColor="#ffffff"
        android:textSize="24sp" />

</RelativeLayout>
