...
            android:background="@android:color/white"
            android:text="By Service Tag"/>

    </LinearLayout>

    <ScrollView
        android:id="@+id/addServicesScrollView"
        android:layout_width="match_parent"
        android:layout_margin="15dp"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="95dp">

        <LinearLayout
            android:id="@+id/addServicesLinLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>
    </ScrollView>


...
