<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_view_event"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#46BD79"
    tools:context="comp4350.eventus.ui.ViewEventActivity">

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/editButton"
        android:layout_marginTop="18dp"
        android:allowUndo="true"
        android:maxLines="5"
        android:scrollbars="vertical"
        android:text="Place your short description here: "
        android:textColor="#ffffff"
        android:textSize="18sp"/>

    <Button
        android:text="Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/backButton"/>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/yourServicesTextView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp"
        android:id="@+id/ServiceScrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/ServiceScrollLinearLayout">

        </LinearLayout>
    </ScrollView>

    <TextView
        android:text="Estimated Cost: "
        android:layout_width="1000dp"
        android:layout_height="50dp"
        android:layout_toStartOf="@+id/titleTextView"
        android:layout_below="@+id/descriptionTextView"
        android:layout_marginTop="14dp"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:id="@+id/estimatedCostTextView"
        android:layout_alignParentEnd="true"/>

    <Button
        android:text="See Receipt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/estimatedCostTextView"
        android:layout_toEndOf="@+id/yourServicesTextView"
        android:id="@+id/receiptButton"
        android:layout_alignStart="@+id/backButton"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_manage"
        android:id="@+id/editButton"
        android:layout_alignParentStart="true"/>

    <TextView
        android:text="Title Here"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:id="@+id/titleTextView"
        android:textColor="#ffffff"
        android:scrollHorizontally="true"
        android:maxWidth="150dp"
        android:maxLines="2"
        android:layout_alignStart="@+id/yourServicesTextView"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/deleteButton"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/button_onoff_indicator_on"
        android:id="@+id/removeServiceButton"
        android:layout_alignTop="@+id/yourServicesTextView"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/addNewServiceButton"
        android:layout_alignEnd="@+id/editButton"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_input_add"
        android:id="@+id/addNewServiceButton"
        android:layout_alignTop="@+id/yourServicesTextView"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:text="Your Services: "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:id="@+id/yourServicesTextView"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/estimatedCostTextView"
        android:layout_centerHorizontal="true"/>



    <Button
        android:text="Delete Event "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/deleteButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:textColor="@android:color/holo_red_dark"/>

    <TextView
        android:id="@+id/dateView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/estimatedCostTextView"
        android:text="Date: "/>

</RelativeLayout>